--- a/package.json
+++ b/package.json
@@ -16,26 +16,33 @@
   "dependencies": {
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/stack": "^6.1.1",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.6",
     "expo": "~44.0.0",
     "expo-font": "~10.0.4",
     "expo-status-bar": "~1.2.0",
     "jest": "^26.6.3",
     "jest-expo": "^44.0.1",
+    "jest-expo-enzyme": "^1.2.5",
+    "node-fetch": "^3.2.3",
     "prop-types": "^15.8.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
-    "react-native-gesture-handler": "^2.3.1",
+    "react-native-gesture-handler": "~2.1.0",
     "react-native-material-tabs": "^4.2.0",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
     "react-native-web": "0.17.1",
     "react-redux": "^7.2.6",
+    "react-test-renderer": "^17.0.2",
     "redux": "^4.1.2",
+    "redux-mock-store": "^1.5.4",
     "redux-saga": "^1.1.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.6"
   },
   "private": true
 }
