--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-gesture-handler": "~2.1.0",
-    "react-native-material-tabs": "^4.2.0",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
     "react-native-web": "0.17.1",
@@ -42,7 +41,8 @@
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.6"
+    "enzyme-adapter-react-16": "^1.15.6",
+    "jest-fetch-mock": "^3.0.3"
   },
   "private": true
 }
